# BolsaV6

./: .env.example  .gitignore  .project-structure  AUDITORIA_SEGURIDAD.md  BULK_IMPORT_IMPLEMENTATION.md  CORRECCION_ESQUEMA.md  ESQUEMA_BASE_DATOS.md  GUIA_INSTALACION.md  PLAN_GESTION_ACTIVOS.md  README.md  README.md.backup  SOLUCION_CORS.md  TROUBLESHOOTING.md  VERIFICACION_INSTALACION.md  docker-compose.prod.yml  docker-compose.yml  install.sh  install_answers.txt  start.sh  stop.sh  test-login.js  validate_schema.sh
backend/: .gitignore  Dockerfile  alembic.ini  create_admin.py  download_quotes.py  pyproject.toml  requirements.txt  setup_data.py
backend/alembic/: env.py
backend/alembic/versions/: .gitkeep  29bc6e996add_add_corporate_transaction_types.py
backend/app/: main.py
backend/app/api/: assets.py  auth.py  backup.py  dashboard.py  fiscal.py  import_transactions.py  markets.py  monitor.py  portfolios.py  quotes.py  system_settings.py  transactions.py  users.py
backend/app/core/: config.py  database.py  dependencies.py  rate_limit.py  redis_client.py  security.py  session.py  utils.py
backend/app/models/: __init__.py  (+8 more)
backend/scripts/: check_all_coverage.py  check_asset_details.py  check_existing_dia.py  cleanup_quotes.py  diagnose_AGAE.py  diagnose_dia_mc.py  diagnose_xpev_gaps.py  force_repair_dia.py  force_repair_sol.py  identify_asset_by_id.py  query_true_dia.py  raw_sql_dia.py  run_mass_repair.py  search_dia_assets.py  search_sol_id.py  test_dia_manual.py  test_manual_yf.py  test_polygon.py  test_yf.py  test_yf_history.py  verify_sol_weekend.py
(+98 files in other folders)
