[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.12.1",
    "alpha-vantage==2.3.1",
    "apscheduler==3.10.4",
    "asyncpg==0.29.0",
    "bcrypt==4.1.2",
    "email-validator==2.1.0.0",
    "fastapi==0.104.1",
    "finnhub-python==2.4.19",
    "httpx==0.25.1",
    "openpyxl==3.1.2",
    "pandas==2.1.3",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "python-dotenv==1.0.0",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.6",
    "redis==5.0.1",
    "sqlalchemy==2.0.23",
    "uvicorn[standard]==0.24.0",
    "uvloop==0.19.0",
    "yfinance==0.2.32",
]
